# foundation_anomaly

./: .gitignore  Makefile  main.py  pyproject.toml
core/: domain_cluster.py  feature_extractor.py  scoremap.py  utils.py
models/: __init__.py  base_model.py  dinov2_model.py  domain_head.py
scripts/: freeze_training_set_region.py  run_demo.py  run_domain_classify.py  run_train_domain_head.py
