[project]
name = "foundation-anomaly"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.6.1",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
]
